feat: restore retained skill drafts safely